overflow fix

--- a/app/styles.sass
+++ b/app/styles.sass
@@ -476,8 +476,7 @@ $content-width: 1300px
     font-weight: 600
     color: #2E3048
     white-space: nowrap
-    overflow: hidden
-    overflow-x: scroll
+    overflow: auto
   &__data
     display: flex
     justify-content: space-between
